--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>DWA</title>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6016680352626386"
+     crossorigin="anonymous"></script>
     </head>
     <body>
       <div id="root"></div>
