add meta code section from google console

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html lang="en">
     <head>
       <meta charset="UTF-8" />
-
+          <meta name="google-site-verification" content="uDqZgcT4jGYEevX28a704WZ2dJ965QsMXeVw6UHaK9E" />
       <!-- Favicon -->
       <link rel="icon" type="image/png" href="/2.png"  />
 
